# slack-app-test

./: .gitignore  Makefile  README.md  app.py  commands.py  logger.py  main.py  pyproject.toml  requirements.in  requirements.txt
deployment/: Dockerfile
