[tool.poetry]
name = "slack-bot-test"
version = "0.1.0"
description = "slack app server"
authors = ["erica <boramismn@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
slackeventsapi = "^3.0.1"
slackclient = "^2.9.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
